--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 
 [dependencies]
-nix = "0.26.2"
-libc ="0.2.109"
+nix = { version ="0.29.0", features = ["fs", "ioctl"] }
+libc ="0.2.155"
 
